<resources>
    <string name="app_name">IntentEngga</string>
    <string name="move_activity">PINDAH AKTIFITI</string>
    <string name="move_with_data">PINDAH AKTIFITI DENGAN DATA</string>
    <string name="dial_number">PANGGIL TELEPON</string>
    <string name="move_with_result">PINDAH AKTIFITI UNTUK RESULT</string>
    <string name="result_from_activity">HASIL DARI AKTIFITI</string>
    <string name="choose_language">PILIH BAHASA PEMROGRAMAN YANG KAMU SUKA</string>
    <string name="_java">JAVA</string>
    <string name="_PHP">PHP</string>
    <string name="_js">JAVASCRIPT</string>
    <string name="_kt">KOTLIN</string>
    <string name="_py">PYTHON</string>
    <string name="choose">PILIH</string>
    <string name="data_received">DATA DITERIMA</string>
    <string name="this_ismove_activity">INI PINDAH AKTIFITI</string>
    <string name="back">KEMBALI</string>
</resources>